FIX broken videojs include, filename overflow.
Also changed some of the bitstream descriptions to be more in line with
existing formats.

--- a/dspace-jspui/src/main/webapp/static/ubc/statspace-custom.css
+++ b/dspace-jspui/src/main/webapp/static/ubc/statspace-custom.css
@@ -159,6 +159,11 @@ div.displayItemThumbnailPlaceholder table span {
 	vertical-align: middle;
 	text-align: center;
 }
+.file-title-overflow {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	padding-bottom: 0.1em;
+}
 
 /* Verify Submission */
 div.metadataVerifyRow {
